--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
+  "devDependencies": {
+    "standard": "^12.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
