--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "custom-search",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://sse87.github.io/custom-search",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
@@ -11,13 +12,15 @@
     "react-scripts": "2.1.3"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "standard": "^12.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
