--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-scripts": "2.1.3"
   },
   "devDependencies": {
